# piano

./: CMakeLists.txt  README.md  mainwindow.h  md_README.html  pages.html
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu.yml  cmake-windows.yml  docs.yml  style-check.yml
cmake/: CodeCoverage.cmake
docs/: Doxyfile
search/: all_0.js  all_1.js  searchdata.js
src/: CMakeLists.txt  Piano.cpp  Piano.h  main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: MainWindow.ui
test/: CMakeLists.txt  tester.cpp
test/cmake/: CodeCoverage.cmake
